[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.3.1"
num-integer = "0.1.44"
regex = "1.4.2"
