[package]
name = "adventofcode-2020"
version = "0.1.0"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-complex = "0.4.0"
num-integer = "0.1.44"
regex = "1.4.2"
